fix z-index of scroll menu

--- a/app/assets/stylesheets/scroll-menu.scss
+++ b/app/assets/stylesheets/scroll-menu.scss
@@ -7,7 +7,7 @@
 	box-shadow: 1px 1px 10px #911111;
 	-webkit-box-shadow: 1px 1px 10px #911111;
 	-moz-box-shadow: 1px 1px 10px #911111;	
-	z-index: 1100;
+	z-index: 1049;
 }
 
 #scroll-menu {
